--- a/.github/workflows/update-pkp-bundle.yml
+++ b/.github/workflows/update-pkp-bundle.yml
@@ -21,5 +21,5 @@ jobs:
           curl -X POST \
             -H "Accept: application/vnd.github.everest-preview+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            --data '{"ref":"main","inputs":{"json-file-path":"path/to/your/file.json"}}' \
+            --data '{"ref":"main","inputs":{"json-file-path":"pkpbundle.json"}}' \
             "https://api.github.com/repos/anandu-m-s/githubAction-demo/actions/workflows/read-json.yaml/dispatches"
