--- a/.github/workflows/update-pkp-bundle.yml
+++ b/.github/workflows/update-pkp-bundle.yml
@@ -20,5 +20,5 @@ jobs:
           curl -X POST \
             -H "Accept: application/vnd.github.everest-preview+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            --data '{"ref":"main","inputs":{"json-file-path":"path/to/your/file.json"}}' \
+            --data '{"ref":"main","inputs":{"json-file-path":"pkpbundle.json"}}' \
             "https://api.github.com/repos/krishaapsingh/reusable-workflow-repo/actions/workflows/reusable-workflow.yml/dispatches"
