--- a/.github/workflows/update-pkp-bundle.yml
+++ b/.github/workflows/update-pkp-bundle.yml
@@ -1,24 +1,19 @@
 name: Caller Workflow
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["reusable_workflow"]  # Specify the name of the reusable workflow here
+    types:
+      - completed
 
 jobs:
-  call-reusable-workflow:
+  trigger-reusable-workflow:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Reusable Workflow
-        uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: peter-evans/repository-dispatch@v2
         with:
-          node-version: '14'
-      - name: Run script to trigger reusable workflow
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github.everest-preview+json" \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            --data '{"ref":"main","inputs":{"json-file-path":"pkpbundle.json"}}' \
-            "https://api.github.com/repos/apsinghuiet/doc-reusable-workflow/actions/workflows/reusable-workflow.yml/dispatches"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: apsinghuiet/doc-reusable-workflow  # Specify the repository where the reusable workflow is located
+          event-type: trigger-reusable-workflow
+          client-payload: '{"workflow": "reusable-workflow", "json-file-path": "pkpbundle.json"}'
