--- a/.github/workflows/update-pkp-bundle.yml
+++ b/.github/workflows/update-pkp-bundle.yml
@@ -9,14 +9,10 @@ jobs:
   trigger-reusable-workflow:
     runs-on: ubuntu-latest
     steps:
-      - name: Get PAT
-        run: echo "TOKEN=${{ secrets.PAT }}" >> $GITHUB_ENV
       - name: Trigger Reusable Workflow
         uses: peter-evans/repository-dispatch@v2
-        env:
-          TOKEN: ${{ secrets.PAT }}
         with:
-          token: ${{ secrets.PAT }}
-          repository: apsinghuiet/doc-reusable-workflow  # Specify the repository where the reusable workflow is located
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: apsinghuiet/doc-reusable-workflow
           event-type: trigger-reusable-workflow
-          client-payload: '{"workflow": "reusable-workflow", "json-file-path": "pkpbundle.json"}'
+          client-payload: '{"message": "Hello from the caller workflow!"}'
