--- a/.github/workflows/update-pkp-bundle.yml
+++ b/.github/workflows/update-pkp-bundle.yml
@@ -19,4 +19,4 @@ jobs:
             -H "Authorization: token ${{ secrets.PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/apsinghuiet/doc-reusable-workflow/actions/workflows/reusable_workflow.yml/dispatches \
-            -d '{"event_type": "trigger-reusable-workflow", "client_payload": {"message": "Hello from the caller workflow!"}}'
+            -d '{"event_type": "trigger-reusable-workflow", "client_payload": {"message": "Hello from the caller workflow!"}, "json-file-path": "pkpbundle.json"}'
