--- a/.github/workflows/update-pkp-bundle.yml
+++ b/.github/workflows/update-pkp-bundle.yml
@@ -19,4 +19,4 @@ jobs:
             -H "Authorization: token ${{ secrets.PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/apsinghuiet/doc-reusable-workflow/actions/workflows/reusable-workflow.yml/dispatches \
-            -d '{"ref": "main", "inputs": {"message": "Hello from the caller workflow!"}}'
+            -d '{"ref": "main", "inputs": {"message": "Hello from the caller workflow!","json-file-path": "pkpbundle.json"}}'
