--- a/.github/workflows/update-pkp-bundle.yml
+++ b/.github/workflows/update-pkp-bundle.yml
@@ -14,9 +14,9 @@ jobs:
         run: echo "::set-output name=token::$(echo -n ${{ secrets.PAT }} | base64)"
       
       - name: Trigger Reusable Workflow
-        run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.PAT }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/apsinghuiet/doc-reusable-workflow/actions/workflows/reusable-workflow.yml/dispatches \
-            -d '{"ref": "main", "inputs": {"message": "Hello from the caller workflow!"}}'
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.PAT }}
+          repository: apsinghuiet/doc-reusable-workflow
+          event-type: trigger-reusable-workflow
+          client-payload: '{"ref": "main", "inputs": {"message": "Hello from the caller workflow!", "json_file_path": "pkpbundle.json"}}'
